# rust-todo-api

./: .env  Cargo.toml  Makefile  README.md  database.json  todo.db
migrations/2023-01-20-134930_create_todos/: down.sql  up.sql
migrations/2023-03-24-141928_create_users/: up.sql
migrations/2023-03-24-150142_create_todos/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs  schema.rs
src/middleware/: auth.rs
src/models/: error.rs  mod.rs  todo.rs  user.rs
src/routes/: auth.rs  todo.rs
src/utils/: token.rs
