[package]
name = "todo-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
chrono = "0.4.23"
either = "1.8.0"
diesel = { version = "2.0.0", features = ["sqlite"] }
dotenvy = "0.15"
